@@ -283,6 +283,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.0.2</version>
         <configuration>
+          <argLine>-XX:MaxPermSize=256m</argLine>
           <source>1.6</source>
           <target>1.6</target>
           <encoding>UTF-8</encoding>
